[gd_scene load_steps=2 format=3 uid="uid://dxm32114wr42o"]

[ext_resource type="Script" uid="uid://cxsnxw47pie13" path="res://enemy.gd" id="1_7k104"]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_7k104")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Health" type="Node" parent="."]

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
